eventpage with recyclerView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="Shops">Shops</string>
     <string name="Start_AR">Start AR</string>
     <string name="virtual_tour">virtual tour</string>
-    <string name="English">EN</string>
+    <string name="Language">EN</string>
 
 
     <string name="yes">Yes</string>
