--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="Events">Events</string>
     <string name="Map">Map</string>
     <string name="Shops">Shops</string>
-    <string name="Start_AR">Start AR</string>
-    <string name="virtual_tour">virtual tour</string>
+    <string name="Start_AR">Start AR experience </string>
+    <string name="virtual_tour">take quick glance</string>
     <string name="Language">EN</string>
 
 
