--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="Start_AR">Start AR</string>
     <string name="virtual_tour">virtual tour</string>
     <string name="Language">EN</string>
+    <string name="event">event</string>
+
+
 
 
     <string name="yes">Yes</string>
