--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -11,10 +11,13 @@
         <string name="Start_AR">بدأ AR</string>
         <string name="virtual_tour">جولة افتراضية</string>
         <string name="Language">عربي</string>
+        <string name="event">حدث</string>
 
 
         <string name="yes">نعم</string>
         <string name="no">لا</string>
+
+
 
 
 
