event current day and if no event

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -44,6 +44,8 @@
     <string name="sitting">الإعدادات</string>
     <string name="notification">الإشعارات</string>
     <string name="QueickGlance">"خذّ لفة "</string>
+    <string name="event">فعالية</string>
+    <string name="to">الى</string>
 
 
 
