--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,6 @@
     <string name="to">to</string>
 
 
-
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="museum_close">The Museum are close</string>
@@ -57,4 +56,7 @@
     <string name="call_us">Call us</string>
     <string name="error_message">There is some problems, please try again later</string>
     <string name="working_hours">Working hours</string>
+    <string name="Open_on">Open on:</string>
+    <string name="Description">Description:</string>
+
 </resources>
