--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -56,7 +56,10 @@
     <string name="error_message">هناك بعض المشاكل ، يرجى المحاولة مرة أخرى لاحقًا</string>
     <string name="working_hours">ساعات العمل</string>
     <string name="Open_on">يفتح:</string>
-    <string name="Description">وصف:</string>
+    <string name="Description">الوصف:</string>
+    <string name="No_events">لا يوجد فعاليات</string>
+
+
 
 
 </resources>
