home page slide show

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -10,7 +10,7 @@
     <string name="Shops">الاسواق</string>
     <string name="to">إلى</string>
     <string name="Start_AR">بدأ AR</string>
-    <string name="virtual_tour">خذّ لفة </string>
+    <string name="virtual_tour">خذّ لفّه </string>
     <string name="Language">عربي</string>
     <string name="yes">نعم</string>
     <string name="no">لا</string>
