--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -58,6 +58,8 @@
     <string name="Open_on">يفتح:</string>
     <string name="Description">الوصف:</string>
     <string name="No_events">لا يوجد فعاليات</string>
+    <string name="no_wifi">مشكلة في الشبكة!</string>
+
 
 
 
