--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -41,7 +41,7 @@
     <string name="you_cant_book_today">"لا يمكن الحجز اليوم "</string>
     <string name="sitting">الإعدادات</string>
     <string name="notification">الإشعارات</string>
-    <string name="QueickGlance">"خذّ لفة "</string>
+    <string name="QueickGlance">"خذّ لفّه "</string>
     <string name="event">فعالية</string>
 
 
