--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -68,5 +68,8 @@
     <string name="salwa_neighbour">حي سلوى</string>
     <string name="shopdayname">يوم</string>
     <string name="opentimeshop">اوقات الافتتاح</string>
+    <string name="Atturaif_shops">اسواق الطريف</string>
+    <string name="more">المزيد</string>
+
 
 </resources>
