--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,9 @@
     <string name="salwa_neighbour">Salwa Neighbour</string>
     <string name="shopdayname">Day</string>
     <string name="opentimeshop">Open Time</string>
+    <string name="Atturaif_shops">Atturaif Shops</string>
+    <string name="more">more</string>
+
 
 
 
