--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -70,6 +70,7 @@
     <string name="opentimeshop">اوقات الافتتاح</string>
     <string name="Atturaif_shops">اسواق الطريف</string>
     <string name="more">المزيد</string>
+    <string name="connection">لا يوجد إتصال في الانترنت !</string>
 
 
 </resources>
