font size and dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="help">Help</string>
     <string name="english">English</string>
     <string name="arabic">Arabic</string>
-    <string name="are_you_sure_you_want_to_leave">are you sure you want to leave</string>
+    <string name="are_you_sure_you_want_to_leave">Are you sure you want to leave?</string>
     <string name="sitting">Settings</string>
     <string name="notification">Notification</string>
     <string name="QueickGlance">Quick glance</string>
@@ -74,7 +74,7 @@
     <string name="shopdayname">Day</string>
     <string name="opentimeshop">Open Time</string>
     <string name="Atturaif_shops">Atturaif Shops</string>
-    <string name="more">more</string>
+    <string name="more">More</string>
     <string name="ticketCopy">Now you must keep a copy of the ticket information to display it when you visit Atturaif</string>
     <string name="ticketInfo">Ticket Information:</string>
     <string name="ticketSave">Save Ticket</string>
@@ -83,6 +83,11 @@
     <string name="checkout">Checkout</string>
     <string name="Adult">Adult</string>
     <string name="connection">Network connection is not available!</string>
+    <string name="Confirm_before_purchase">Confirm before purchase</string>
+    <string name="confirm">Confirm</string>
+    <string name="Cancel">Cancel</string>
+    <string name="View_Ticket">View Ticket</string>
+
 
 
 </resources>
