--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -28,6 +28,7 @@
     <string name="opens_at">"يفتح "</string>
     <string name="pay">إدفع</string>
     <string name="payment">الدفع</string>
+    <string name="Book">حجز التذاكر</string>
     <string name="please_enter_the_code">الرجاء إدخال رمز التحقق</string>
     <string name="please_enter_your_phone_number">الرجاء إدخال رقم الهاتف</string>
     <string name="please_pay_to_complete_the_booking">* الرجاء الدفع لإكمال الحجز</string>
