--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -4,7 +4,7 @@
 
     <string name="app_name">Atturaif</string>
     <string name="Booking">حجز</string>
-    <string name="Home">الصفحة الرئيسية</string>
+    <string name="Home">حي الطريف</string>
     <string name="Events">الفعاليات</string>
     <string name="Map">الخريطه</string>
     <string name="Shops">الاسواق</string>
@@ -90,8 +90,7 @@
     <string name="enable">تمكين</string>
     <string name="reject">رفض</string>
 
-
-
-
+    <string name="take_glance">خذّ لفة سريعة</string>
+    <string name="about_us_dis">الطريف هو حي يقع في الدرعية ، في شمال غرب مدينة الرياض بالمملكة العربية السعودية. وكانت أول عاصمة للسلالة السعودية بعد دعوة محمد بن عبد الوهابي للتجديد الديني في عام 1157. وتعتبر منطقة الطريف واحدة من من أهم المعالم الأثرية في الدرعية ، حيث تضم أهم المباني التاريخية والقصور والمعالم التاريخية مثل قصر سلوى ، حيث تمت إدارة شؤون الدولة السعودية الأولى ومسجد الإمام محمد بن سعود ، في 29 يوليو 2010 ، وافقت لجنة التراث العالمي على تسجيل الطريف في الحي الدرزي التاريخي ضمن قائمة التراث العالمي لليونسكو ، ثم بدأت أعمال الترميم ، ثم إضافة أماكن جديدة مثل السوق حيث يبيع البائعون منتجاتهم وطعامهم التقليدي. تم بناء متحف الحياة الاجتماعية لإظهار جزء من الحياة القديمة اليومية</string>
 
 </resources>
