--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="Atturaif_shops">Atturaif Shops</string>
     <string name="more">More</string>
     <string name="ticketCopy">Now you must keep a copy of the ticket information to display it when you visit Atturaif</string>
+    <string name="cash">To complete the purchase of the tickets, you must pay by cash when you visit Atturaif site on the specified date</string>
     <string name="ticketInfo">Ticket Information:</string>
     <string name="ticketSave">Save Ticket</string>
     <string name="total">Total</string>
